# EASScalarFieldsModeling

./: .gitignore  GITHUB_INSTALL_AND_PUBLISH_v0.1.20.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.21.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.22.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.24.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.25.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.28.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.31.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.32.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.35.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.37.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.40.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.41.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.42.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.43.md  README.md  TDD_admission_control_materials_v0.1.33.md  TDD_association_indexed_SOO_feedback_core.md  TDD_charge_role_path_remap_suite_v0.1.22.md  TDD_contract_driven_overlay_synthesis_v0.1.29.md  TDD_current_framework_state.md  TDD_current_framework_state_v0.1.14.md  TDD_current_framework_state_v0.1.15.md  TDD_current_framework_state_v0.1.16.md  TDD_current_framework_state_v0.1.17.md  TDD_current_framework_state_v0.1.18.md  TDD_current_framework_state_v0.1.21.md  TDD_current_framework_state_v0.1.24.md  TDD_current_framework_state_v0.1.27.md  TDD_current_framework_state_v0.1.28.md  TDD_current_framework_state_v0.1.30.md  TDD_current_framework_state_v0.1.32.md  TDD_current_framework_state_v0.1.34.md  TDD_current_framework_state_v0.1.35.md  TDD_current_framework_state_v0.1.37.md  TDD_current_framework_state_v0.1.40.md  TDD_current_framework_state_v0.1.43.md  TDD_current_framework_state_v0.1.6.md  TDD_current_framework_state_v0.1.8.md  TDD_data_driven_workflow_protocols_v0.1.32.md  (+21 more)
docs/: GITHUB_INSTALL_AND_PUBLISH_v0.1.23.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.26.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.27.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.29.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.30.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.31.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.33.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.34.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.36.md  GITHUB_INSTALL_AND_PUBLISH_v0.1.44.md  JOB_BUNDLE_POLICY.md  README.md  RELEASE_GUARD_POLICY.md  TDD_certification_plan_executability_gate_v0.1.27.md  TDD_current_framework_state.md  TDD_current_framework_state_v0.1.10.md  TDD_current_framework_state_v0.1.11.md  TDD_current_framework_state_v0.1.12.md  TDD_current_framework_state_v0.1.13.md  TDD_current_framework_state_v0.1.20.md  TDD_current_framework_state_v0.1.21.md  TDD_current_framework_state_v0.1.23.md  TDD_current_framework_state_v0.1.25.md  TDD_current_framework_state_v0.1.26.md  TDD_current_framework_state_v0.1.29.md  TDD_current_framework_state_v0.1.31.md  TDD_current_framework_state_v0.1.33.md  TDD_current_framework_state_v0.1.36.md  TDD_current_framework_state_v0.1.44.md  TDD_current_framework_state_v0.1.7.md  TDD_current_framework_state_v0.1.9.md  TDD_declarative_overlay_enforcement.md  TDD_dual_plaintext_encrypted_evidence_output.md  TDD_gradient_governed_vacuum_split_path_accommodation_v0.1.35.md  TDD_initialization_steady_state_gate_v0.1.22.md  TDD_locked_SOO_functional_reporting.md  TDD_locked_framework_certificate_system.md  TDD_modeling_plan_approval_layer_v0.1.26.md  TDD_operator_agent_approval_loop_v0.1.31.md  TDD_path_change_admission_gates_v0.1.22.md  (+7 more)
overlays/: minimal_association_indexed_soo_feedback_overlay.json  minimal_candidate_overlay.json  minimal_candidate_soo_overlay.json  minimal_control_overlay.json  two_support_candidate_overlay.json  two_support_explicit_path_candidate_overlay.json  two_support_explicit_path_signed_packet_candidate_overlay.json
rank3_enforced/: __init__.py  active_association.py  admission_mechanisms.py  association_indexed_soo.py  base_gate.py  bounded_context_parity_cli.py  bounded_context_soo.py  capabilities.py  certificates.py  certified_runner.py  check_release_guard.py  contract_overlay_synthesis.py  control_suite.py  controls.py  cyclic_return.py  dual_package.py  dynamic_paths.py  encryption.py  endpoint_class_path_response_separation.py  evidence.py  exceptions.py  external_path_monitor.py  feedback_soo_search.py  feedback_soo_search_cli.py  field0_locked_simulation.py  fingerprints.py  generate_encryption_key.py  generate_signing_key.py  gradient_path_accommodation.py  immutable_result.py  init_workspace_cli.py  initialization_debug_pair_cli.py  initialization_runner.py  initialization_settling.py  initialization_sources.py  initialization_trace.py  list_suites_cli.py  locked_registries.py  manifest.py  model_type_registry.py  (+55 more)
tests/: test_association_indexed_soo_feedback.py  test_bounded_context_soo.py  test_certificate_system.py  test_certification_blocks.py  test_certification_plan_executability_v0127.py  test_charge_path_admission_controls_v0133.py  test_charge_role_path_suite_v0122.py  test_contract_overlay_synthesis_v0129.py  test_declarative_overlays.py  test_declarative_soo.py  test_dual_package_output.py  test_endpoint_class_path_response_separation_v0138.py  test_enforced_minimal.py  test_explicit_path_readouts.py  test_external_path_monitor_and_workspace_v0123.py  test_field0_locked_simulation_v0144.py  test_gradient_path_accommodation_v0135.py  test_modeling_intent_contract_v0124.py  test_modeling_intent_contract_v0125.py  test_modeling_plan_approval_v0126.py  test_operator_agent_workflow_v0131.py  test_operator_review_packet_v0130.py  test_path_facing_remap.py  test_publication_certified_run.py  test_release_identity_v0128.py  test_release_version_guard.py  test_role_path_remap_and_dynamic_paths.py  test_run_manager.py  test_scalar_field_geometry_shortest_path_v0137.py  test_soo_functional_and_packet.py  test_split_vacuum_triangle_emergence_v0136.py  test_split_vacuum_triangle_emergence_v0137.py  test_support_seeded_initialization.py  test_support_two_ledger_charge_modules.py  test_theorem_failure_diagnostics_v0134.py  test_vacuum_admissibility_variation_v0142.py  test_whole_field_conjugate_vacuum_v0143.py  test_workflow_protocols_v0132.py
tools/: check_framework_zip_capabilities.py  generate_release_key.py  sign_release_manifest.py  verify_release_manifest.py
(+128 files in other folders)
