[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enforceable-rank3-modeling"
version = "0.1.30"
description = "Enforceable Rank-3 Scalar Field Modeling Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "cryptography",
]

[tool.setuptools]
packages = ["rank3_enforced"]
py-modules = ["scalar_field_geometry"]
include-package-data = true

[tool.setuptools.package-data]
rank3_enforced = ["overlay_suites/charge_same_opposite_association_indexed/*.json", "overlay_suites/charge_role_path_remap_dynamic_path_v0_1/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
rank3-check-release-guard = "rank3_enforced.check_release_guard:main"
rank3-check-release-identity = "rank3_enforced.release_identity:main"
rank3-generate-signing-key = "rank3_enforced.generate_signing_key:main"
rank3-generate-encryption-key = "rank3_enforced.generate_encryption_key:main"
rank3-verify-dual-package = "rank3_enforced.verify_dual_package:main"
rank3-run-overlay = "rank3_enforced.run_overlay_cli:main"
rank3-run-suite = "rank3_enforced.run_suite_cli:main"
rank3-list-suites = "rank3_enforced.list_suites_cli:main"
rank3-init-workspace = "rank3_enforced.init_workspace_cli:main"
rank3-write-modeling-intent-template = "rank3_enforced.modeling_intent_cli:main_template"
rank3-validate-modeling-intent-contract = "rank3_enforced.modeling_intent_cli:main_validate"
rank3-plan-from-modeling-intent = "rank3_enforced.modeling_intent_cli:main_plan"
rank3-synthesize-overlays-from-contract = "rank3_enforced.modeling_intent_cli:main_synthesize"
rank3-generate-operator-review-packet = "rank3_enforced.operator_review_packet:main"
rank3-approve-modeling-plan = "rank3_enforced.modeling_intent_cli:main_approve_plan"
rank3-validate-modeling-plan = "rank3_enforced.modeling_intent_cli:main_validate_plan"
rank3-analyze-soo-debug-pair = "rank3_enforced.soo_debug_analysis_cli:main"
rank3-run-soo-debug-pair = "rank3_enforced.soo_debug_pair_cli:main"
rank3-run-initialization-debug-pair = "rank3_enforced.initialization_debug_pair_cli:main"

rank3-run-soo-validation = "rank3_enforced.soo_validation_cli:main"
rank3-run-direct-recurrent-initialization = "rank3_enforced.recurrent_initialization_cli:main"
rank3-run-feedback-soo-search = "rank3_enforced.feedback_soo_search_cli:main"
rank3-run-bounded-context-parity = "rank3_enforced.bounded_context_parity_cli:main"
rank3-run-publication-certified = "rank3_enforced.publication_certified_run:main_run"
rank3-verify-publication-certified = "rank3_enforced.publication_certified_run:main_verify"
